--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 						</td>
 						<td style="border:black solid 1px">
 							<img src="images/4.jpg" style="width:175px;height:175px;">
-							<div>This is I am</div>
+							<div>Kee Kang Run Team</div>
 						</td>
 					</tr>
 				</table>
