--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 					</div>
 					<div class="msg"></div>
 					<ul class="actions">
-						<li><input type="submit" value="Send Message" id="submit" class="primary" /></li>
+						<li><input href="." type="submit" value="Send Message" id="submit" class="primary"/><a href="."></li>
 						<li><input type="reset" value="Reset" /></li>
 					</ul>
 					<ul id="users"></ul>
@@ -484,7 +484,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</div>
 						</div>
 						<ul class="actions">
-							<li><input type="submit" value="Send Message" class="primary" /></li>
+							<li><input type="submit" value="Send Message" class="primary" href="#" /></li>
 							<li><input type="reset" value="Reset" /></li>
 						</ul>
 					</form>
