--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 					</div>
 					<div class="msg"></div>
 					<ul class="actions">
-						<li><input href="." type="submit" value="Send Message" id="submit" class="primary"/><a href="."></li>
+						<li><input type="submit" value="Send Message" id="submit" class="primary"/></li>
 						<li><input type="reset" value="Reset" /></li>
 					</ul>
 					<ul id="users"></ul>
