--- a/404.html
+++ b/404.html
@@ -86,7 +86,7 @@
         </style>
 </head>
 <body>
-    <a href="index.html">
+    <a href="./#">
         <svg height="0.8em" width="0.8em" viewBox="0 0 2 1" preserveAspectRatio="none">
          <polyline
                fill="none" 
